--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,14 @@
             .no-print { display: none !important; }
             .print-only { display: block !important; }
         }
+
+        @keyframes pulse-slow {
+            0%, 100% { opacity: 0.1; transform: scale(1); }
+            50% { opacity: 0.2; transform: scale(1.1); }
+        }
+        .animate-pulse-slow {
+            animation: pulse-slow 8s ease-in-out infinite;
+        }
     </style>
 <script type="importmap">
 {
